# msf-haskell

./: LICENSE  README.md  msfHaskell.cabal
examples/: ExampleExploit.hs
src/: MSF.hs  Makefile  MsgPack.hs
src/MSF/: Auth.hs  Commands.hs  Concurrent.hs  Console.hs  Core.hs  DB.hs  Event.hs  Host.hs  Job.hs  Module.hs  Monad.hs  Plugin.hs  Scan.hs  Session.hs
src/MSF/Event/: Handler.hs  Prim.hs
src/MsgPack/RPC/: Client.hs  Server.hs  Types.hs
src/RPC/: Auth.hs  Console.hs  Core.hs  DB.hs  Job.hs  Module.hs  Plugin.hs  Session.hs  SimpleRPC.hs  Util.hs
src/Types/: Auth.hs  Console.hs  Core.hs  DB.hs  Job.hs  Module.hs  Plugin.hs  Session.hs
tests/: Tests.hs
tests/Tests/: MsgPack.hs
whitepaper/: Makefile  main.tex  mysiam.cls  siam11.clo
